# c-project

./: .gitignore  CMakeLists.txt  Makefile  iR_dev  instructions.txt  readme.md
src/: main.c  main.cc
src/example/: example.cc
